Fixed background-video alignment and Features overflow

--- a/src/styles/style1.css
+++ b/src/styles/style1.css
@@ -8200,6 +8200,7 @@ html {
     .video-container video {
     width: 100%;
     height: 100%;
+    left: 0;
     position: absolute;
     object-fit: cover;
     z-index: 0;
